--- a/.env.example
+++ b/.env.example
@@ -33,63 +33,32 @@ INFOQUEST_API_KEY="infoquest-xxx"
 # BRAVE_SEARCH_API_KEY=xxx # Required only if SEARCH_API is brave_search
 # JINA_API_KEY=jina_xxx # Optional, default is None
 
-# Optional, RAG provider
-# RAG_PROVIDER=vikingdb_knowledge_base
-# VIKINGDB_KNOWLEDGE_BASE_API_URL="api-knowledgebase.mlp.cn-beijing.volces.com"
-# VIKINGDB_KNOWLEDGE_BASE_API_AK="AKxxx"
-# VIKINGDB_KNOWLEDGE_BASE_API_SK=""
-# VIKINGDB_KNOWLEDGE_BASE_RETRIEVAL_SIZE=15
+# Optional, RAG Embedding (used for both ingest and retrieval; independent of milvus/qdrant).
+# RAG_EMBEDDING_PROVIDER=openai  # support openai,dashscope
+# RAG_EMBEDDING_BASE_URL=
+# RAG_EMBEDDING_MODEL=
+# RAG_EMBEDDING_API_KEY=
+# RAG_EMBEDDING_DIM=1536   # Optional; if unset, uses model default
+# RAG_EMBEDDING_BATCH_SIZE=512   # Optional; if unset, uses model-based lookup
 
-# RAG_PROVIDER=ragflow
-# RAGFLOW_API_URL="http://localhost:9388"
-# RAGFLOW_API_KEY="ragflow-xxx"
-# RAGFLOW_RETRIEVAL_SIZE=10
-# RAGFLOW_CROSS_LANGUAGES=English,Chinese,Spanish,French,German,Japanese,Korean # Optional. To use RAGFlow's cross-language search, please separate each language with a single comma
-
-# RAG_PROVIDER=dify
-# DIFY_API_URL="https://api.dify.ai/v1"
-# DIFY_API_KEY="dataset-xxx"
-
-# MOI is a hybrid database that mainly serves enterprise users (https://www.matrixorigin.io/matrixone-intelligence)
-# RAG_PROVIDER=moi
-# MOI_API_URL="https://cluster.matrixonecloud.cn"
-# MOI_API_KEY="xxx-xxx-xxx-xxx"
-# MOI_RETRIEVAL_SIZE=10
-# MOI_LIST_LIMIT=10
-
-
-# RAG_PROVIDER: milvus  (using free milvus instance on zilliz cloud: https://docs.zilliz.com/docs/quick-start )
+# Optional, RAG provider (self-managed vector DB: milvus or qdrant)
+# RAG_PROVIDER: milvus (zilliz cloud: https://docs.zilliz.com/docs/quick-start)
 # RAG_PROVIDER=milvus
 # MILVUS_URI=<endpoint_of_self_hosted_milvus_or_zilliz_cloud>
 # MILVUS_USER=<username_of_self_hosted_milvus_or_zilliz_cloud>
 # MILVUS_PASSWORD=<password_of_self_hosted_milvus_or_zilliz_cloud>
 # MILVUS_COLLECTION=documents
-# MILVUS_EMBEDDING_PROVIDER=openai # support openai,dashscope
-# MILVUS_EMBEDDING_BASE_URL=
-# MILVUS_EMBEDDING_MODEL=
-# MILVUS_EMBEDDING_API_KEY=
-# MILVUS_AUTO_LOAD_EXAMPLES=true
 
-# RAG_PROVIDER: milvus  (using milvus lite on Mac or Linux)
+# RAG_PROVIDER: milvus lite (local)
 # RAG_PROVIDER=milvus
 # MILVUS_URI=./milvus_demo.db
 # MILVUS_COLLECTION=documents
-# MILVUS_EMBEDDING_PROVIDER=openai # support openai,dashscope
-# MILVUS_EMBEDDING_BASE_URL=
-# MILVUS_EMBEDDING_MODEL=
-# MILVUS_EMBEDDING_API_KEY=
-# MILVUS_AUTO_LOAD_EXAMPLES=true
 
-# RAG_PROVIDER: qdrant (using qdrant cloud or self-hosted: https://qdrant.tech/documentation/quick-start/)
+# RAG_PROVIDER: qdrant (https://qdrant.tech/documentation/quick-start/)
 # RAG_PROVIDER=qdrant
 # QDRANT_LOCATION=https://xyz-example.eu-central.aws.cloud.qdrant.io:6333
 # QDRANT_API_KEY=<your_qdrant_api_key>  # Optional, only for cloud/authenticated instances
 # QDRANT_COLLECTION=documents
-# QDRANT_EMBEDDING_PROVIDER=openai  # support openai,dashscope
-# QDRANT_EMBEDDING_BASE_URL=
-# QDRANT_EMBEDDING_MODEL=text-embedding-ada-002
-# QDRANT_EMBEDDING_API_KEY=
-# QDRANT_AUTO_LOAD_EXAMPLES=true
 
 # Optional, volcengine TTS for generating podcast
 VOLCENGINE_TTS_APPID=xxx
